# rss-parser-micro-service

./: AGENTS.md  Cargo.toml  README.md  config.toml
deploy/docker/: compose.override.yaml  compose.yaml
src/: config.rs  lib.rs  main.rs  rss.rs
src/application/: fetcher.rs
src/application/fetcher/: errors.rs
src/config/: error.rs  feed.rs  notification.rs  queue.rs  validation.rs
src/domain/: feed.rs  news.rs
src/domain/feed/: errors.rs  types.rs
src/infrastructure/: config.rs  fetcher.rs
src/infrastructure/config/: error.rs  feed.rs  queue.rs
