[package]
name = "rss-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
lapin = "3.7.2"
reqwest = "0.13"
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
url = "2.5.8"
