[package]
name = "rss-parser"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
bytes = "1"
futures = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["http2", "rustls", "charset", "gzip", "brotli", "zstd", "deflate"] }
rss = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
